# flowzo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: addlicense.yml  ci.yml
flowzo/: pyproject.toml
flowzo/.github/workflows/: ci.yml
flowzo/docs/: architecture.md  governance.md  legal.md  roadmap.md
flowzo/flowzo_cli/: main.py  session.py
flowzo/flowzo_integrations/: __init__.py  github.py
flowzo/flowzo_ledger/: __init__.py
flowzo_cli/: __init__.py  main.py
flowzo_desktop/: Cargo.toml  build.rs  package.json  svelte.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
flowzo_desktop/icons/: README.md
flowzo_desktop/src/: app.css  app.html  main.rs
flowzo_desktop/src/lib/: FocusRing.svelte
flowzo_desktop/src/routes/: +layout.svelte  +page.svelte
flowzo_integrations/: linear.py
flowzo_ledger/: database.py  models.py
tests/: __init__.py  test_cli_roundtrip.py  test_desktop_integration.py  test_integrations.py  test_ledger_integration.py  test_session_engine.py
